--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "meu-bot",
+  "name": "tomatador-bot",
   "version": "1.0.0",
+  "description": "Bot do Discord que joga tomate na cabeça dos usuários",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
-    "discord.js": "^14.22.1",
-    "dotenv": "^16.3.1",
-    "express": "^5.1.0"
-  }
+    "discord.js": "^14.15.0",
+    "node-fetch": "^3.3.2",
+    "@napi-rs/canvas": "^1.5.4"
+  },
+  "author": "SeuNome",
+  "license": "MIT"
 }
