--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "discord.js": "^14.15.0",
     "node-fetch": "^3.3.2",
-    "@napi-rs/canvas": "^1.5.4"
+    "@napi-rs/canvas": "^1.5.4",
+    "gif-encoder-2": "^1.0.5"
   },
   "author": "SeuNome",
   "license": "MIT"
