Atualizando arquivos do bot

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "node": "22.x"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.53",
     "discord.js": "^14.15.0",
-    "node-fetch": "^3.3.2",
-    "@napi-rs/canvas": "^1.5.4",
-    "gif-encoder-2": "^1.0.5"
+    "gif-encoder-2": "^1.0.5",
+    "node-fetch": "^3.3.2"
   },
   "author": "SeuNome",
   "license": "MIT"
