--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node": "22.x"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "discord.js": "^14.15.0",
-    "node-fetch": "^3.3.2",
     "@napi-rs/canvas": "^0.1.53",
+    "discord.js": "^14.15.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "gif-encoder-2": "^1.0.5",
-    "dotenv": "^16.4.5"
+    "gifwrap": "^0.10.1",
+    "node-fetch": "^3.3.2"
   },
   "author": "SeuNome",
   "license": "MIT"
