--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "gif-encoder-2": "^1.0.5",
     "gifwrap": "^0.10.1",
+    "jimp": "^1.6.0",
     "node-fetch": "^3.3.2"
   },
   "author": "SeuNome",
