--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "node": "22.x"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.53",
     "discord.js": "^14.15.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "gif-encoder-2": "^1.0.5",
-    "gifwrap": "^0.10.1",
-    "jimp": "^1.6.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "@napi-rs/canvas": "^1.5.4",
+    "gifwrap": "^0.10.9",
+    "jimp": "^0.22.9",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "author": "SeuNome",
   "license": "MIT"
