--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "discord.js": "^14.15.0",
     "node-fetch": "^3.3.2",
-    "gifwrap": "0.10.8",
     "jimp": "^0.22.9",
+    "gifencoder": "^2.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
