--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "tomatador-bot",
+  "name": "meu-bot",
   "version": "1.0.0",
-  "description": "Bot do Discord que joga tomate na cabeça dos usuários",
+  "description": "Bot do Discord com GIF animado fixo",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
@@ -11,13 +10,10 @@
     "node": "22.x"
   },
   "dependencies": {
-    "discord.js": "^14.15.0",
-    "node-fetch": "^3.3.2",
+    "discord.js": "^14.17.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "jimp": "^0.22.9",
-    "gifencoder": "^2.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
-  "author": "SeuNome",
-  "license": "MIT"
+    "gifencoder": "^2.0.0"
+  }
 }
