--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "tomatador-bot",
+  "name": "tomatador",
   "version": "1.0.0",
-  "description": "Bot do Discord com reações automáticas e comando /tomate",
-  "main": "index.js",
-  "type": "module",
+  "description": "Bot do Discord com comando /tomate",
+  "main": "index.cjs",
+  "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": "22.x"
+    "start": "node index.cjs"
   },
   "dependencies": {
-    "discord.js": "^14.15.1",
-    "dotenv": "^16.3.1",
+    "discord.js": "^14.15.0",
     "express": "^4.18.2",
-    "@discordjs/rest": "^1.5.2",
-    "axios": "^1.6.5"
+    "dotenv": "^16.3.1",
+    "axios": "^1.12.2"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
