--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "node index.cjs"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "canvas": "^3.2.0",
     "discord.js": "^14.15.0",
-    "express": "^4.18.2",
     "dotenv": "^16.3.1",
-    "axios": "^1.12.2"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=22.0.0"
