--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "tomatador",
   "version": "1.0.0",
-  "description": "Bot do Discord com comando /tomate",
+  "description": "Bot do Discord que joga tomates",
   "main": "index.cjs",
   "type": "commonjs",
   "scripts": {
     "start": "node index.cjs"
   },
-  "dependencies": {
-    "axios": "^1.12.2",
-    "canvas": "^3.2.0",
-    "discord.js": "^14.15.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
   "engines": {
     "node": ">=22.0.0"
+  },
+  "dependencies": {
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "canvas": "^3.1.2",
+    "express": "^4.18.2"
   }
 }
