--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "tomatador",
+  "name": "meu-bot",
   "version": "1.0.0",
-  "description": "Bot do Discord que joga tomates",
-  "main": "index.cjs",
-  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.cjs"
-  },
-  "engines": {
-    "node": ">=22.0.0"
+    "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.22.1",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.0",
-    "canvas": "^3.1.2",
-    "express": "^4.18.2"
+    "express": "^5.1.0"
   }
 }
