--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "meu-bot",
+  "name": "tomatador",
   "version": "1.0.0",
+  "description": "Bot do Discord que reage a mensagens com emojis",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
-    "discord.js": "^14.22.1",
-    "dotenv": "^16.3.1",
-    "express": "^5.1.0"
+    "discord.js": "^14.15.3",
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1"
   }
 }
